@@ -1,6 +1,7 @@
 function gettext(locale) {
   var messages = locale == 'cs' ? {
     "korektor_service_error": "Nelze kontaktovat službu Korektor.",
+    "korektor_editable_control_not_found": "Nelze najít editační prvek, který by bylo možné použít.",
     "korektor_text_modified_error": "Obsah editačního prvku byl změněn, nahrazení nebude provedeno.",
     "korektor_dlg_ok": "OK",
     "korektor_dlg_cancel": "Storno",
@@ -10,6 +11,7 @@ function gettext(locale) {
     "korektor_dlg_suggestions_custom": "Vlastní"
   } : {
     "korektor_service_error": "Cannot contact the Korektor service.",
+    "korektor_editable_control_not_found": "Cannot find editable control to use.",
     "korektor_text_modified_error": "The text of the editable field has changed, not replacing it.",
     "korektor_dlg_ok": "OK",
     "korektor_dlg_cancel": "Cancel",
